[metadata]
name = EpikCordInteractions.py
version = 0.1.0
description = A simple, light library for interactions via HTTP.
long_description = file: README.md
license_files = LICENSE.md
long_description_content_type =  text/markdown
keywords = EpikCordInteractions, HTTP-Interactions, Interactions, HTTPInteractions, EpikCord, EpikCord.py, EpikCordInteraction
classifiers = 
    Development Status :: 3 - Alpha,
    Intended Audience :: Developers,      
    Topic :: Software Development :: Build Tools,
    License :: OSI Approved :: MIT License,   
    Programming Language :: Python :: 3.10,
  
license = MIT
author = EpikCord
url = https://github.com/EpikCord/EpikCordInteractions.py

[options]
zip_safe = False
include_package_data = True

packages = 
    EpikInteractions
install_requires = 
    quart
[options.package_data]
* = *.txt *.md